--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@
   --sidebar-ring: hsl(217.2 91.2% 59.8%);
 }
 
-.dark {
+/* .dark {
   --background: hsl(0 0% 3.9%);
   --foreground: hsl(0 0% 98%);
   --card: hsl(0 0% 3.9%);
@@ -73,7 +73,7 @@
   --sidebar-accent-foreground: hsl(240 4.8% 95.9%);
   --sidebar-border: hsl(240 3.7% 15.9%);
   --sidebar-ring: hsl(217.2 91.2% 59.8%);
-}
+} */
 
 @theme inline {
   --color-background: var(--background);
