--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,3 +144,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+.link-underline {
+  border-bottom-width: 0;
+  background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
+  background-size: 0 1.5px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size .5s ease-in-out;
+}
+
+.link-underline-black {
+  background-image: linear-gradient(transparent, transparent), linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0))
+}
+
+.link-underline:hover {
+  background-size: 100% 1.5px;
+  background-position: 0 100%
+}
