--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,28 @@
 
 @custom-variant dark (&:is(.dark *));
 
+.container {
+  @apply mx-auto px-4 sm:px-6 md:px-8 lg:px-10 max-w-[1300px]
+}
+
+.lg\:basis-1\/8 {
+  @media (width >=64rem
+
+    /* 1024px */
+  ) {
+    flex-basis: calc(1/8 * 100%);
+  }
+}
+
+.xl\:basis-1\/10 {
+  @media (width >=80rem
+
+    /* 1280px */
+  ) {
+    flex-basis: calc(1/10 * 100%);
+  }
+}
+
 :root {
   --background: hsl(0 0% 100%);
   --foreground: hsl(0 0% 3.9%);
